--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,13 @@ services:
     image: postgres
     restart: unless-stopped
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     env_file:
       - ./backend/.prod.env
     environment:
       - PGDATA=/var/lib/postgresql/data/db-files/
     ports:
       - "5432:5432"
+
+volumes:
+  db-data:
